# cjyPlayer

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/cjy/cjyplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  FFPlayerBuilder.cpp  FFPlayerBuilder.h  FFResample.cpp  FFResample.h  GLVideoView.cpp  GLVideoView.h  IAudioPlay.cpp  IAudioPlay.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  IPlayer.cpp  IPlayer.h  IPlayerBuilder.cpp  IPlayerBuilder.h  IPlayerProxy.cpp  IPlayerProxy.h  IResample.cpp  IResample.h  IVideoView.cpp  IVideoView.h  PlayerData.cpp  PlayerData.h  PlayerEGL.cpp  PlayerEGL.h  PlayerLog.cpp  PlayerLog.h  PlayerParameter.cpp  PlayerParameter.h  PlayerShader.cpp  PlayerShader.h  PlayerTexture.cpp  (+6 more)
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/cjy/cjyplayer/: BaseActivity.kt  MainActivity.kt
app/src/main/java/com/cjy/cjyplayer/activity/: BaseActivity.kt  ChoiceFileActivity.kt  CjyPlayer.kt  MainActivity.kt
app/src/main/java/com/cjy/cjyplayer/listener/: RequestPermissionListener.kt
app/src/main/res/layout/: activity_choice_file.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cjy/cjyplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
